package com.padroes.decorator;

public interface Notificacao {
    String enviar();
}
